syntax = "proto3";

option java_package = "ir.ms.pb";
//option java_outer_classname = "PB2";
option java_multiple_files = true;
option optimize_for = LITE_RUNTIME; //CODE_SIZE;

option go_package = "x";

import "pb_enums.proto";

//////////////////////////// User //////////////////////////////////

// BlockUser
message PB_UserParam_BlockUser {
    int32 UserId = 1;
    string UserName = 2;
}
message PB_UserOfflineResponse_BlockUser {
    int32 ByUserId = 1;
    int32 TargetUserId = 2;
    string TargetUserName = 3;
}

// UnBlockUser
message PB_UserParam_UnBlockUser {
    int32 Offset = 1;
    int32 Limit = 2;
}
message PB_UserOfflineResponse_UnBlockUser {
    repeated UserView Users  = 1;
}

//
message PB_UserParam_BlockedList {
    int32 UserId = 1;
    string UserName = 2;
}
message PB_UserResponse_BlockedList {
    int32 ByUserId = 1;
    int32 TargetUserId = 2;
    string TargetUserName = 3;
}

//UpdateAbout
message PB_UserParam_UpdateAbout {
    string NewAbout = 1;
}
message PB_UserOfflineResponse_UpdateAbout {
    int32 UserId = 1;
    string NewAbout = 2;
}

//
message PB_UserParam_UpdateUserName {
    string NewUserName = 1;
}
message PB_UserOfflineResponse_UpdateUserName {
    int32 UserId = 1;
    string NewUserName = 2;
}


message PB_UserParam_ChangeAvatar {
    bool None = 1;
    bytes ImageData2 = 2;
}
message PB_UserOfflineResponse_ChangeAvatar {

}

//
message PB_UserParam_ChangePrivacy {
    ProfilePrivacyLevelEnum Level = 1;
}
message PB_UserResponseOffline_ChangePrivacy {

}
//
message PB_UserParam_CheckUserName {
    ProfilePrivacyLevelEnum Level = 1;
}
message PB_UserResponse_CheckUserName {

}

/////////////////////////////// Extract from herer /////////////////////////////
message UserView {

}


service RPC_UserOffline {
    rpc BlockUser (PB_UserParam_BlockUser) returns (PB_UserOfflineResponse_BlockUser);
    rpc UnBlockUser (PB_UserParam_UnBlockUser) returns (PB_UserOfflineResponse_UnBlockUser);
    rpc UpdateAbout (PB_UserParam_UpdateAbout) returns (PB_UserOfflineResponse_UpdateAbout);
    rpc UpdateUserName (PB_UserParam_UpdateUserName) returns (PB_UserOfflineResponse_UpdateUserName);
    rpc ChangePrivacy (PB_UserParam_ChangePrivacy) returns (PB_UserResponseOffline_ChangePrivacy);
    rpc ChangeAvatar (PB_UserParam_ChangeAvatar) returns (PB_UserOfflineResponse_ChangeAvatar);
}

service RPC_User {
    rpc CheckUserName (PB_UserParam_CheckUserName) returns (PB_UserResponse_CheckUserName);
    rpc GetBlockedList (PB_UserParam_BlockedList) returns (PB_UserResponse_BlockedList);
}

////////////////////////////////////////////

service RPC_Auth {
    rpc CheckPhone (PB_UserParam_CheckUserName) returns (PB_UserResponse_CheckUserName);
    rpc SendCode (PB_UserParam_CheckUserName) returns (PB_UserResponse_CheckUserName);
    rpc SendCodeToSms (PB_UserParam_CheckUserName) returns (PB_UserResponse_CheckUserName);
    rpc SendCodeToTelgram (PB_UserParam_CheckUserName) returns (PB_UserResponse_CheckUserName);
    rpc SingUp (PB_UserParam_CheckUserName) returns (PB_UserResponse_CheckUserName);
    rpc SingIn (PB_UserParam_CheckUserName) returns (PB_UserResponse_CheckUserName);
    rpc LogOut (PB_UserParam_CheckUserName) returns (PB_UserResponse_CheckUserName);
}
